appId: com.microsoft.emmx
platform: android
name: Browsing Flow
timeout: 10000
resetApp: false
---
- launchApp
- waitForVisible: "Search or ask anything"
- tapOn: "Search or ask anything"
- inputText: "vn express"
- scroll: down
- screenshot: "browsing_categories"
